Se implementa batalla y horoscopo a GUI

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PokeClient
 endorsed.classpath=
 excludes=
-file.reference.irPokemon.jar=C:\\Users\\Pipe_\\Documents\\NetBeansProjects\\irPokemon\\dist\\irPokemon.jar
+file.reference.irPokemon.jar=../irPokemon/dist/irPokemon.jar
 includes=**
 jar.compress=false
 javac.classpath=\
